--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "tailwindcss": "^3.0.0",
     "postcss": "^8.0.0",
+    "postcss-cli": "^9.0.0",
     "autoprefixer": "^10.0.0"
   },
   "devDependencies": {},
