Update build process to compile and move 'index.html' and 'main.js' to 'dist' directory for complete static website generation. Create 'index.html' in 'src' directory as main entry point with references to 'tailwind.css' and 'main.js'.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo project that demonstrates how LLM ads can be implemented and blocked.",
   "main": "src/main.js",
   "scripts": {
-    "build": "postcss src/tailwind.css -o dist/tailwind.css"
+    "build": "postcss src/tailwind.css -o dist/tailwind.css && cp src/index.html dist/index.html && cp src/main.js dist/main.js"
   },
   "dependencies": {
     "tailwindcss": "^3.0.0",
