--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "llm-ads-demo",
-  "version": "1.0.0",
-  "description": "A demo project that demonstrates how LLM ads can be implemented and blocked.",
-  "main": "src/main.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "postcss src/tailwind.css -o dist/tailwind.css && cp src/index.html dist/index.html && cp src/main.js dist/main.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "tailwindcss": "^3.0.0",
-    "postcss": "^8.0.0",
-    "postcss-cli": "^9.0.0",
-    "autoprefixer": "^10.0.0"
-  },
-  "devDependencies": {},
-  "author": "Andrey Meshkov",
-  "license": "MIT"
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
+  }
 }
-
