--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8",
-    "vite-plugin-cloudflare-functions": "^0.7.0"
+    "vite-plugin-cloudflare-functions": "^0.7.0",
+    "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
-    "flowbite": "^2.5.2"
+    "flowbite": "^2.5.2",
+    "solid-js": "^1.9.2",
+    "solid-markdown": "^2.0.13"
   }
 }
