--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
+    "diff": "^7.0.0",
     "flowbite": "^2.5.2",
     "solid-js": "^1.9.2",
     "solid-markdown": "^2.0.13"
